Sửa lại câu chuyện lần đầu gặp nhau tại 22 Trần Thị Diệu

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 <div class="timeline">
     <div class="timeline-item">
         <h3>Lần đầu gặp nhau 💕</h3>
-        <p>Chúng ta gặp nhau tại một quán cà phê, nơi mọi thứ bắt đầu...</p>
+        <p>Chúng ta gặp nhau tại trọ em , nơi mọi thứ bắt đầu...</p>
     </div>
     <div class="timeline-item">
         <h3>Lời tỏ tình đầu tiên 💌</h3>
