Nâng cấp giao diện và tính năng

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,3 +78,25 @@
 </form>
 <p id="quiz-result"></p>
  
+<div id="quiz">
+    <h3>Trắc Nghiệm Tình Yêu ❤️</h3>
+    <form id="quiz-form">
+        <label>1. Bạn thích hoạt động nào nhất trong thời gian rảnh?</label>
+        <input type="radio" name="activity" value="1"> Đi dạo  
+        <input type="radio" name="activity" value="2"> Xem phim  
+
+        <label>2. Món ăn yêu thích của bạn là gì?</label>
+        <input type="radio" name="food" value="1"> Sushi  
+        <input type="radio" name="food" value="2"> Pizza  
+
+        <button type="button" onclick="calculateResult()">Kiểm tra kết quả</button>
+    </form>
+    <div id="quiz-result"></div>
+</div>
+<section id="love-story">
+    <h2>Câu Chuyện Tình Yêu Của Chúng Tôi 💖</h2>
+    <div class="story">
+        <img src="/static/couple.jpg" alt="Couple" class="story-image">
+        <p>Chúng tôi đã gặp nhau vào một ngày đẹp trời tại 22 Trần Thị Diệu. Từ khoảnh khắc đó, cuộc sống của chúng tôi trở nên ngọt ngào và đầy ắp những kỷ niệm đẹp...</p>
+    </div>
+</section>
